add main content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,45 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JetBrains+Mono" />
+		<style>
+			body {
+				font-family: "JetBrains Mono", "Courier New", Courier, monospace;
+				font-size: 16px;
+				padding: 0 10px;
+				margin: 50px auto;
+				max-width: 650px;
+			}
+
+			ul {
+				margin-top: 0px;
+			}
+
+			#maincontent {
+				max-width: 38em;
+				margin: 15 auto;
+			}
+
+			h2 {
+				margin-bottom: 0px;
+			}
+
+			h2 {
+				margin-bottom: 0px;
+			}
+		</style>
 		<title>Code Sculpt</title>
 	</head>
 	<body>
-		Hello World!
+		<h2>Code Sculpt</h2>
+		<p>
+			Code Sculpt is a technology company that specializes in cutting edge artificial intelligence (AI) and tech
+			solutions.
+		</p>
+
+		<h3>Contact Us:</h3>
+		<ul>
+			<li>email: <a href="mailto:contact@codesculpt.in">contact@codesculpt.in</a></li>
+		</ul>
 	</body>
 </html>
