--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 	</head>
 	<body>
 		<h2>Code Sculpt</h2>
-		<p>
-			Code Sculpt is a technology company that specializes in cutting edge artificial intelligence (AI) and tech
-			solutions.
-		</p>
+		<p>At Code Sculpt we specialise in cutting edge artificial intelligence (AI) and tech solutions.</p>
 
 		<h3>Contact Us:</h3>
 		<ul>
