--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JetBrains+Mono" />
+		<link rel="icon" href="media/logo.svg" />
 		<style>
 			body {
 				font-family: "JetBrains Mono", "Courier New", Courier, monospace;
@@ -33,12 +34,14 @@
 		<title>Code Sculpt</title>
 	</head>
 	<body>
-		<h2>Code Sculpt</h2>
-		<p>At Code Sculpt we specialise in cutting edge artificial intelligence (AI) and tech solutions.</p>
+		<div id="maincontent">
+			<h2>Code Sculpt</h2>
+			<p>At Code Sculpt we specialise in cutting edge artificial intelligence (AI) and tech solutions.</p>
 
-		<h3>Contact Us:</h3>
-		<ul>
-			<li>email: <a href="mailto:contact@codesculpt.in">contact@codesculpt.in</a></li>
-		</ul>
+			<h3>Contact Us:</h3>
+			<ul>
+				<li>email: <a href="mailto:contact@codesculpt.in">contact@codesculpt.in</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
